# learning_llm

./: .gitignore  LICENSE  README.md  course_comparison_analysis.py
bedrock/: main.py  pyproject.toml
deeplearning.ai/: course_list_20250629.md  zip_parent_directory.py
deeplearning.ai/1. ChatGPT Prompt Engineering for Developers/: l2-guidelines.ipynb
deeplearning.ai/12. Pair Programming with a Large Language Model/: L1-palm.ipynb  requirements.txt
deeplearning.ai/13. Functions, Tools and Agents with LangChain/: L1-openai_functions_student.ipynb
deeplearning.ai/18. Advanced Retrieval for AI with Chroma/: L1-student.ipynb
deeplearning.ai/19. Build LLM Apps with LangChain.js/: L1_student.ipynb
deeplearning.ai/2. Building Systems with the ChatGPT API/: L1_student.ipynb  L8_student.ipynb
deeplearning.ai/23. Serverless LLM apps with Amazon Bedrock/: L1_Your_first_generations_with_Amazon_Bedrock.ipynb
deeplearning.ai/25. Open Source Models with Hugging Face/: helper.py
deeplearning.ai/31. Quantization Fundamentals with Hugging Face/: L2_data_types.ipynb
deeplearning.ai/35. Building Agentic RAG with Llamaindex/: L1_Router_Engine.ipynb
gemini/: gemini_test.py
mcp/: app_gradio_client.py  app_gradio_server_sentiment_analysis.py  client.py  fastagent.config.yaml  package-lock.json  package.json  pyproject.toml  server.py
mcp/agent_local/: agent.json
mcp/agent_playwright/: agent.json
ollama/: main.py  pyproject.toml  test.py
oterm/: main.py  pyproject.toml
prompty/: basic.prompty  basic.py  prompty.json
stock-analysis-platform/: index.html
(+44 files in other folders)
